Bug #2638 - WP Nav adjustment - truncate long site names
A slight css fix for wrapping that occurs with longer site names combined with certain screen sizes

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -1149,7 +1149,7 @@
 				#wp-admin-bar-network-menu-mobile,
 				#wp-admin-bar-my-openlab {
 					> .ab-item{
-						min-width: 132px;
+						min-width: 140px;
 					}
 					@media (max-width: @screen-xs-max) {
 						> .ab-item {
